--- a/IndicadoresRMA.html
+++ b/IndicadoresRMA.html
@@ -157,7 +157,7 @@
       // Função para emitir o som e atualizar a variável correspondente
       function playSoundAndMarkAsPlayed(indicatorId) {
         // Emitir o som (substitua 'path/to/sound.mp3' pelo caminho do seu arquivo de som)
-        var audio = new Audio('https://pixeldrain.com/api/file/2LnbDmEY');
+        var audio = new Audio('https://downloadwap.com/ringtones/preview/?p=preview-item&id=m112556&uid=137262061179&sid=1084319326');
         audio.play();
 
         // Atualizar a variável indicando que o som foi emitido para este indicador
