--- a/IndicadoresRMA.html
+++ b/IndicadoresRMA.html
@@ -157,7 +157,7 @@
       // Função para emitir o som e atualizar a variável correspondente
       function playSoundAndMarkAsPlayed(indicatorId) {
         // Emitir o som (substitua 'path/to/sound.mp3' pelo caminho do seu arquivo de som)
-        var audio = new Audio('https://downloadwap.com/ringtones/preview/?p=preview-item&id=m112556&uid=137262061179&sid=1084319326');
+        var audio = new Audio('https://github.com/jhonatasantunes1605/IndicadorRMA/blob/main/Bill_Conti_Gonna_Fly_Now_Ringtone.mp3');
         audio.play();
 
         // Atualizar a variável indicando que o som foi emitido para este indicador
