--- a/IndicadoresRMA.html
+++ b/IndicadoresRMA.html
@@ -130,6 +130,7 @@
         font-size: 40px;
       }
     }
+      </style>
   <script>
     $(document).ready(function () {
         var apiKey = 'AIzaSyAIB-qCRdOAgEJYuPAxNTEsoR2Ijt33-TE';
