--- a/Climaehora.html
+++ b/Climaehora.html
@@ -98,7 +98,7 @@
     }
 
     function getWeather() {
-      var apiKey = 'SUA_CHAVE_DE_API';
+      var apiKey = '16728ff298006508e873a90b6a4469d5';
       var city = 'Joinville';
       var state = 'SC';
       var apiUrl = 'https://api.openweathermap.org/data/2.5/weather?q=' + city + ',' + state + ',BR&appid=' + apiKey + '&units=metric&lang=pt_br';
