--- a/Climaehora.html
+++ b/Climaehora.html
@@ -167,7 +167,9 @@
         { time: '09:18', message: 'Hora do Café da Manhã!', sound: 'https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/café da manhã.mp3', type: 'breakfast' },
         { time: '11:43', message: 'Hora do Almoço!', sound: 'https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/almoço.mp3', type: 'breakfast' },
         { time: '15:18', message: 'Hora do Café da Tarde!', sound: 'https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/café da tarde.mp3', type: 'lunch' },
-        { time: '17:45', message: 'Hora da Zeladoria para encerrar o expediente!', sound: 'https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/fim de expediente.mp3', type: 'afternoonTea' }
+        { time: '17:45', message: 'Hora da Zeladoria para encerrar o expediente!', sound: 'https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/fim de expediente.mp3', type: 'afternoonTea' },
+        { time: '18:00', message: '👋', sound: 'https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/tchau.mp3', type: 'timebye' }
+      
       ];
 
       // Verifica se está na hora de notificar
