--- a/IndicadoresRMA2.html
+++ b/IndicadoresRMA2.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -102,89 +102,97 @@
       var apiKey = 'AIzaSyAIB-qCRdOAgEJYuPAxNTEsoR2Ijt33-TE';
       var spreadsheetId = '1jARX3HPaU5HT6pOmY8upjxjvCPmwRAlbc3WsfKMTSks';
       var range = 'AGUARDANDO BAIXA!A2:i';
- var url = 'https://sheets.googleapis.com/v4/spreadsheets/' + spreadsheetId + '/values/' + range + '?key=' + apiKey;
-    var maxRecords = 10;
-    var allRecords = [];
-    var oldRecords = [];
+      var url = 'https://sheets.googleapis.com/v4/spreadsheets/' + spreadsheetId + '/values/' + range + '?key=' + apiKey;
+      var maxRecords = 20;
+      var allRecords = [];
+      var oldRecords = [];
 
-    function updateTable() {
-      $.get(url, function(data) {
-        var values = data.values;
-        var tableBody = $('#table-body');
-        allRecords = values.slice(1, maxRecords + 1);
-        tableBody.empty();
+      function updateTable() {
+        $.get(url, function(data) {
+          var values = data.values;
+          var tableBody = $('#table-body');
+          var oldRecordsLength = oldRecords.length; // Length of old records before update
+          allRecords = values.slice(1, maxRecords + 1);
+          tableBody.empty();
 
-        for (var i = 0; i < allRecords.length; i++) {
-          var row = allRecords[i];
-          var rowHtml = '';
+          for (var i = 0; i < allRecords.length; i++) {
+            var row = allRecords[i];
+            var rowHtml = '';
 
-          for (var j = 0; j < row.length; j++) {
-            rowHtml += '<td>' + row[j] + '</td>';
+            for (var j = 0; j < row.length; j++) {
+              rowHtml += '<td>' + row[j] + '</td>';
+            }
+
+            var rowElement = $('<tr>' + rowHtml + '</tr>');
+
+            if (i === 0) {
+              rowElement.addClass('highlight');
+            } else if (row[2] === allRecords[0][2]) {
+              rowElement.addClass('highlight');
+              rowElement.find('td').addClass('highlight');
+            }
+
+            tableBody.append(rowElement);
           }
 
-          var rowElement = $('<tr>' + rowHtml + '</tr>');
-
-          if (i === 0) {
-            rowElement.addClass('highlight');
-          } else if (row[2] === allRecords[0][2]) {
-            rowElement.addClass('highlight');
-            rowElement.find('td').addClass('highlight');
+          if (oldRecordsLength > allRecords.length) { // If old records length is greater than current records length
+            playRemoveSound(); // Play remove sound
+          } else if (oldRecordsLength < allRecords.length) { // If old records length is less than current records length
+            playAddSound(); // Play add sound
           }
+          oldRecords = allRecords.slice(); // Update old records
+        });
+      }
 
-          tableBody.append(rowElement);
+      function playRemoveSound() {
+        try {
+          var audio = new Audio('https://themushroomkingdom.net/sounds/wav/smw/smw_lost_a_life.wav');
+          audio.play();
+        } catch (error) {
+          console.error('Erro ao reproduzir som:', error);
         }
+      }
 
-        if (JSON.stringify(oldRecords) !== JSON.stringify(allRecords)) {
-          playSound();
-          oldRecords = JSON.parse(JSON.stringify(allRecords));
+      function playAddSound() {
+        try {
+          var audio = new Audio('https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/message-notification-103496.mp3'); // Add the URL to the add sound file here
+          audio.play();
+        } catch (error) {
+          console.error('Erro ao reproduzir som:', error);
         }
-      });
-    }
+      }
 
-    function playSound() {
-  try {
-    var audio = new Audio('https://themushroomkingdom.net/sounds/wav/smw/smw_lost_a_life.wav');
-    audio.play();
-  } catch (error) {
-    console.error('Erro ao reproduzir som:', error);
-  }
-}
-
-    updateTable();
-    setInterval(updateTable, 1000);
-  });
-</script>
+      updateTable();
+      setInterval(updateTable, 100);
+    });
+  </script>
 </head>
 <body>
-   <div class="container">
-   
-
-    <div class="counter-container">
-      <img src="https://img.terabyteshop.com.br/terabyte-logo.svg" alt="Terabyte Logo" height="100">
-      <div class="counter">Total de registros: <span id="record-counter">0</span></div>
-    </div>
-     <h1>Fila de Testes</h1>
-
-    <div id="table-container">
-      <table class="table table-striped">
-        <thead class="thead-dark">
-          <tr>
-            <th class="sortable">DATA</th>
-            <th class="sortable">TICKET</th>
-            <th class="sortable">PEDIDO</th>
-            <th class="sortable">TIPO</th>
-            <th class="sortable">CATEGORIA</th>
-            <th class="sortable">ID</th>
-            <th class="sortable">MARCA</th>
-            <th class="sortable">PRODUTO</th>
-            <th class="sortable">SERIAL</th>
-          </tr>
-        </thead>
-        <tbody id="table-body"></tbody>
-      </table>
-    </div>
-
-    <div id="sound"></div>
+<div class="container">
+  <div class="counter-container">
+    <img src="https://img.terabyteshop.com.br/terabyte-logo.svg" alt="Terabyte Logo" height="100">
+    <div class="counter">Total de registros: <span id="record-counter">0</span></div>
   </div>
+  <h1>Fila de Testes</h1>
+  <div id="table-container">
+    <table class="table table-striped">
+      <thead class="thead-dark">
+      <tr>
+        <th class="sortable">DATA</th>
+        <th class="sortable">TICKET</th>
+        <th class="sortable">PEDIDO</th>
+        <th class="sortable">TIPO</th>
+        <th class="sortable">CATEGORIA</th>
+        <th class="sortable">ID</th>
+        <th class="sortable">MARCA</th>
+        <th class="sortable">PRODUTO</th>
+        <th class="sortable">SERIAL</th>
+      </tr>
+      </thead>
+      <tbody id="table-body"></tbody>
+    </table>
+  </div>
+  <div id="sound"></div>
+</div>
 </body>
 </html>
