--- a/IndicadoresRMA2.html
+++ b/IndicadoresRMA2.html
@@ -146,7 +146,7 @@
 
       function playRemoveSound() {
         try {
-          var audio = new Audio('https://themushroomkingdom.net/sounds/wav/smw/smw_lost_a_life.wav');
+          var audio = new Audio('https://raw.githubusercontent.com/jhonatasantunes1605/IndicadorRMA/master/BAIXA DE RMA.mp3');
           audio.play();
         } catch (error) {
           console.error('Erro ao reproduzir som:', error);
